# lyrics-hs

./: LICENSE  README.md  lyrics.cabal
src/: Lib.hs
src/Lyrics/: Foo.hs  Scrape.hs  Utils.hs
src/Lyrics/Scrape/: Entities.hs  HTML.hs  HTTP.hs  Parse.hs  Reg.hs
