name:                lyrics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/swizzard/lyrics#readme
license:             BSD3
license-file:        LICENSE
author:              sam raker
maintainer:          sam.raker@gmail.com
copyright:           2017 sam raker
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , regex-base
                     , regex-pcre
                     , scalpel-core
                     , tagsoup
                     , text
                     , transformers
                     , wreq
  default-language:    Haskell2010

executable lyrics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lyrics
  default-language:    Haskell2010

test-suite lyrics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lyrics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/swizzard/lyrics
